# enlightenment

./: Makefile.linux  Makefile.win
BINDINGS/python/: .gitignore  README.txt
E-MODULES-EXTRA/: e_modules-TEMPLATE.spec.in
E-MODULES-EXTRA/comp-scale/: module.desktop.in
E-MODULES-EXTRA/cpu/: module.desktop.in
E-MODULES-EXTRA/deskshow/: module.desktop.in
E-MODULES-EXTRA/eektool/: module.desktop.in
E-MODULES-EXTRA/elfe/: launch.sh
E-MODULES-EXTRA/empris/: module.desktop.in
E-MODULES-EXTRA/engage/: module.desktop.in
E-MODULES-EXTRA/eooorg/: module.desktop.in
E-MODULES-EXTRA/everything-aspell/: module.desktop.in
E-MODULES-EXTRA/everything-mpris/: module.desktop.in
E-MODULES-EXTRA/everything-pidgin/: module.desktop.in
E-MODULES-EXTRA/everything-places/: module.desktop.in
E-MODULES-EXTRA/everything-shotgun/: module.desktop.in
E-MODULES-EXTRA/everything-tracker/: module.desktop.in
E-MODULES-EXTRA/everything-wallpaper/: module.desktop.in
E-MODULES-EXTRA/everything-websearch/: module.desktop.in
E-MODULES-EXTRA/eweather/: module.desktop.in
E-MODULES-EXTRA/exalt-client/: module.desktop.in
E-MODULES-EXTRA/flame/: module.desktop.in
E-MODULES-EXTRA/forecasts/: module.desktop.in
E-MODULES-EXTRA/iiirk/: module.desktop.in
E-MODULES-EXTRA/itask/: module.desktop.in
E-MODULES-EXTRA/mem/: module.desktop.in
E-MODULES-EXTRA/moon/: module.desktop.in
E-MODULES-EXTRA/mpdule/: module.desktop.in
E-MODULES-EXTRA/net/: module.desktop.in
E-MODULES-EXTRA/news/: module.desktop.in
E-MODULES-EXTRA/penguins/: module.desktop.in
E-MODULES-EXTRA/photo/: module.desktop.in
E-MODULES-EXTRA/places/: module.desktop.in
E-MODULES-EXTRA/rain/: module.desktop.in
E-MODULES-EXTRA/rmb/: module.desktop.in
E-MODULES-EXTRA/screenshot/: module.desktop.in
E-MODULES-EXTRA/skel/: module.desktop.in
E-MODULES-EXTRA/taskbar/: module.desktop.in
E-MODULES-EXTRA/uptime/: module.desktop.in
E-MODULES-EXTRA/weather/: module.desktop.in
E16/e/: .gitignore  Makefile.am  configure.ac
E16/epplets/: ChangeLog  configure.ac
EXAMPLES/eio/: eio_cp_r.c
FORMATTING/: aliases.sh
GAMES/e_cho/: .gitignore  configure.ac
GAMES/efbb/: .gitignore  configure.ac  efbb.spec.in
GAMES/etypers/: .gitignore  Makefile  etypers.c  etypers.edc  words.txt
IN-EFL/ecore/: autogen.sh  configure.ac
IN-EFL/ecore/src/lib/ecore_evas/: Ecore_Evas.h  Makefile.am  ecore_evas.c  ecore_evas_fb.c  ecore_evas_module.c  ecore_evas_private.h
IN-EFL/ecore/src/lib/ecore_evas/engines/: Makefile.am
IN-EFL/ecore/src/lib/ecore_evas/engines/buffer/: Makefile.am  ecore_evas_buffer.c  ecore_evas_extn.c
IN-EFL/ecore/src/lib/ecore_evas/engines/cocoa/: Makefile.am  ecore_evas_cocoa.c
IN-EFL/ecore/src/lib/ecore_evas/engines/directfb/: Makefile.am  ecore_evas_directfb.c
IN-EFL/ecore/src/lib/ecore_evas/engines/fb/: Makefile.am  ecore_evas_fb.c
IN-EFL/ecore/src/lib/ecore_evas/engines/psl1ght/: Makefile.am  ecore_evas_psl1ght.c
IN-EFL/ecore/src/lib/ecore_evas/engines/sdl/: Makefile.am  ecore_evas_sdl.c
IN-EFL/ecore/src/lib/ecore_evas/engines/wayland/: Makefile.am  ecore_evas_wayland_egl.c  ecore_evas_wayland_private.h  ecore_evas_wayland_shm.c
IN-EFL/ecore/src/lib/ecore_evas/engines/win32/: Makefile.am  ecore_evas_win32.c
IN-EFL/ecore/src/lib/ecore_evas/engines/wince/: Makefile.am  ecore_evas_wince.c
IN-EFL/ecore/src/lib/ecore_evas/engines/x/: Makefile.am  ecore_evas_x.c
IN-EFL/eina/: NEWS  autogen.sh
IN-EFL/eio/: NEWS  autogen.sh
IN-EFL/embryo/: autogen.sh
IN-EFL/escape/: autogen.sh
IN-EFL/evil/: autogen.sh
PROTO/azy/: azy.spec.in
PROTO/community/: community_access.c  community_analyse.c  country_map.html  country_map_nosmall.html  country_map_notop.html  e17-clients.stats
PROTO/easyui/: .gitignore  Makefile  README  ajax.js  badge.js  browser.js  calculator.js  class.js  dict.js  dump.js  easy-connman.js  eui.edc  eui.js  file.js  filter.js  group.js  infinigag.js  multiple-views.js  notes.js  photo.js  reddit.js  rotten_tomatoes.js  rss.js  simpleFilter.js  split.js  test-ajax.js  test-routing.js  toolbar.js  twitter.js  video.js
PROTO/ekbd/data/themes/: Makefile.am
PROTO/elev8/: configure.ac
PROTO/elocation/: .gitignore  AUTHORS  Makefile.am  README  configure.ac
PROTO/elocation/doc/: Doxyfile.in  Makefile.am  head.html
PROTO/elocation/src/lib/: Elocation.h  Makefile.am  elocation.c  elocation_private.h
PROTO/elocation/src/tests/: Makefile.am  elocation_suite.c
PROTO/epdf/: epdf.spec.in
PROTO/esskyuehl/src/modules/mysql/mysac/: Makefile.am  mysac.c  mysac.h  mysac_connect.c  mysac_decode_field.c  mysac_decode_field.h  mysac_decode_respbloc.c  mysac_decode_respbloc.h  mysac_decode_row.c  mysac_decode_row.h  mysac_encode_values.c  mysac_encode_values.h  mysac_errors.c  mysac_memory.c  mysac_memory.h  mysac_net.c  mysac_query.c  mysac_res.c  mysac_stmt.c  mysac_usedatabase.c  mysac_utils.c  mysac_utils.h
PROTO/etrophy/: .gitignore  README  TODO  configure.ac  etrophy.spec.in
PROTO/etypers/: AUTHORS  Makefile  README  etypers.c  etypers.edc  words.txt
PROTO/ev/: ev.desktop
PROTO/libeweather/: configure.ac  module.desktop.in
PROTO/shellementary/: Makefile.am  configure.ac
PROTO/shotgun/: AUTHORS  README  configure.ac
PROTO/shotgun/src/modules/sawed-off/: Makefile.am  e-module-sawed-off.edc  e_mod_config.c  e_mod_main.c  e_mod_main.h  module.desktop.in
SCRIPTS/buildbot/: desc.py  (+1 more)
clouseau/: configure.ac
clouseau/src/scripts/: Makefile.am
e_dbus/: README  configure.ac
e_dbus/src/lib/notification/: Makefile.am
econnman/: .gitignore
eet/: ChangeLog  NEWS
efx/: Makefile.am  configure.ac  efx.pc.in
eina/: ChangeLog  NEWS
eio/: ChangeLog
empower/: empower.spec.in
enjoy/: configure.ac
enki/: enki.desktop
ephoto/: ephoto.spec.in
ephysics/: ephysics.spec.in
ephysics_tests/: .gitignore  COPYING_ARTS  Makefile.am  README  configure.ac
espionnage/: espionnage.desktop.in
evas/: ChangeLog
eve/: .gitignore  configure.ac
excessive/: excessive.desktop.in
expedite/: .gitignore  AUTHORS  ChangeLog  NEWS  configure.ac  expedite.spec.in
(+827 files in other folders)
