MAINTAINERCLEANFILES = Makefile.in
SUBDIRS =

if BUILD_ECORE_X
SUBDIRS += x
endif

if BUILD_ECORE_BUFFER
SUBDIRS += buffer
endif

if BUILD_ECORE_FB
SUBDIRS += fb
endif

if BUILD_ECORE_DIRECTFB
SUBDIRS += directfb
endif

if BUILD_ECORE_WIN32
SUBDIRS += win32
endif

if BUILD_ECORE_SDL
SUBDIRS += sdl
endif

if BUILD_ECORE_COCOA
SUBDIRS += cocoa
endif

if BUILD_ECORE_WINCE
SUBDIRS += wince
endif

if BUILD_ECORE_PSL1GHT
SUBDIRS += psl1ght
endif

if BUILD_ECORE_WAYLAND
SUBDIRS += wayland
endif

